added checkbox Exercise of last days to stats page (no functionality)

--- a/french/styles.css
+++ b/french/styles.css
@@ -561,13 +561,18 @@ table td:not([data-key="date"]) {
     border: 0;
 }
 
-table:not(.A1) th.A1, table:not(.A1) td.A1,
-table:not(.A2) th.A2, table:not(.A2) td.A2,
-table:not(.B1) th.B1, table:not(.B1) td.B1,
-table:not(.B2) th.B2, table:not(.B2) td.B2,
-table:not(.C1) th.C1, table:not(.C1) td.C1 {
-    max-width: 0 !important;
-    visibility: hidden !important;
+table:not(.A1) th.A1,
+table:not(.A1) td.A1,
+table:not(.A2) th.A2,
+table:not(.A2) td.A2,
+table:not(.B1) th.B1,
+table:not(.B1) td.B1,
+table:not(.B2) th.B2,
+table:not(.B2) td.B2,
+table:not(.C1) th.C1,
+table:not(.C1) td.C1 {
+    max-width: 0;
+    visibility: hidden;
     padding: 0;
     border: 0;
 }
